[package]
name = "char-classes"
version = "0.2.3"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "char", "byte", "classes", "cluster"]
categories = ["no-std", "no-std::no-alloc", "parsing"]
description = "Simple matching of one char or byte, similar to regex"

license = "MIT"
repository = "https://github.com/A4-Tacks/char-classes-rs"

readme = "README.md"

[features]
default = ["macros"]
macros = ["char-classes-proc_macro"]

[workspace]
members = ["char-classes-proc_macro"]

[dependencies]
char-classes-proc_macro = { version = "0.1.0", path = "char-classes-proc_macro", optional = true }
